2006-03-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/httpstreamer/http.py:
	* flumotion/component/consumers/httpstreamer/resources.py:
	  create an Issuer base class, plus two subclasses, to create
	  keycards based on requests
	* flumotion/test/test_http.py:
	  add tests for this

2006-03-01  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/common/keycards.py:
	* flumotion/twisted/credentials.py:
	  add token keycard and credentials

2006-02-28  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/effects/volume/volume.py:
	* flumotion/component/producers/firewire/firewire.py:
	* flumotion/component/producers/soundcard/soundcard.py:
	  fix volume effect for 0.10. Fixes #328

2006-02-28  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/admin/text/view.py:
	  fix text admin going over numebr of rows

2006-02-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/launch/main.py:
	  add an errback for component start

2006-02-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/Makefile.am:
	* common/setup.m4:
	  add FLUMOTION_SETUP macro

2006-02-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	  use an m4/ dir so that autopoint puts its copied macros there
	  instead of cluttering up common

2006-02-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/gstreamer.py:
	  add a quick way of checking if we can set a given value
	  on a property
	* flumotion/test/test_common_gstreamer.py:
	  add tests

2006-02-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/admin.py:
	* flumotion/admin/gtk/client.py:
	* flumotion/admin/gtk/connections.py:
	* flumotion/admin/gtk/dialogs.py:
	* flumotion/admin/gtk/parts.py:
	* flumotion/admin/gtk/spyglass.py:
	* flumotion/admin/gtk/videotest.py:
	* flumotion/admin/gtk/wizard.py:
	* flumotion/common/Makefile.am: