@@ -1,6 +1,16 @@
 2006-03-01  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/component/consumers/httpstreamer/http.py:
+	* flumotion/component/consumers/httpstreamer/http.xml:
+	* flumotion/component/consumers/httpstreamer/resources.py:
+	* flumotion/test/test_http.py:
+	  add "issuer" property to streamers
+	  can be set to HTTPTokenIssuer or HTTPAuthIssuer
+	  needs nicer abstracting in the future, but will do for now
+
+2006-03-01  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/component/consumers/httpstreamer/http.py:
 	* flumotion/component/consumers/httpstreamer/resources.py:
 	  create an Issuer base class, plus two subclasses, to create
 	  keycards based on requests
@@ -23,7 +33,7 @@
 2006-02-28  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/admin/text/view.py:
-	  fix text admin going over numebr of rows
+	  fix text admin going over number of rows
 
 2006-02-28  Thomas Vander Stichele  <thomas at apestaart dot org>
 
